Limit textarea width, hide "unpacked" data for now

--- a/multistomp_to_g1xon.html
+++ b/multistomp_to_g1xon.html
@@ -6,13 +6,15 @@
 </head>
 <body>
     <pre>MS-50/70 patch:</pre>
-    <textarea id="source_text" name="source_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Hex input ..." autofocus=""></textarea><br>
+    <textarea id="source_text" name="source_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Hex input ..." autofocus="" style="max-width:95%"></textarea><br>
+    <div id="devstuff" style="display:none">
     <pre>Unpacked:</pre>
-    <textarea id="unpacked_text" name="unpacked_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Unpacked output..."></textarea><br>
+    <textarea id="unpacked_text" name="unpacked_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Unpacked output..." style="max-width:95%"></textarea><br>
     <pre>Unpacked, modified for G1xon:</pre>
-    <textarea id="g1xon_unpacked_text" name="g1xon_unpacked_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Repacked output..."></textarea><br>
+    <textarea id="g1xon_unpacked_text" name="g1xon_unpacked_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Repacked output..." style="max-width:95%"></textarea><br>
+    </div>
     <pre>G1xon patch:</pre>
-    <textarea id="g1xon_patch_text" name="g1xon_patch_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Repacked output..."></textarea>
+    <textarea id="g1xon_patch_text" name="g1xon_patch_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Repacked output..." style="max-width:95%"></textarea>
     <br><br>
     <pre id="message"></pre><br>
     <script>
