Add some readme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
+    <pre>For sending SysEx, you can use MIDI-OX, Pocket MIDI or any other software you like.<br>
+    (0) Use Zoom Effect Manager to flash all patches you need<br>
+    (1) Send <b>f0 52 00 64 50 f7</b> to enable Editor Mode (required once per pedal startup)<br>
+    (2) By hand, select preset you want to replace<br>
+    (3) Paste Multistomp patch below, use copy modified patch and send it to your G1Xon</pre>
     <pre>MS-50/70 patch:</pre>
     <textarea id="source_text" name="source_text" rows="6" cols="60" class="form-control" spellcheck="false" placeholder="Hex input ..." autofocus="" style="max-width:95%"></textarea><br>
     <div id="devstuff" style="display:none">
